@@ -1,4 +1,5 @@
 2.2.0 - Added: inline order grid editation
+      - Fixed: cart and order weight calculation
 
 2.1.0 - Added: Packeta related checkout delivery option availability is based on specified pricing rules and carrier support of countries and delivery methods
       - Removed: default price and specific countries GUI removed from delivery method configuration
